[package]
name = "saiko"
version = "0.1.0"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2018"
build = "build.rs"
description = "An implementation of wayland PROTOCOL in rust"
license = "MIT"

[dependencies]
failure = "0.1.5"
heck = "0.3.1"
log = "0.4"
env_logger = "0.6.0"
nix = "0.13.0"
byteorder = "1.3.1"

[build-dependencies]
wayland_protocol_code_generator = "0.1.1"

[dev-dependencies]
tempfile = "3.0.7"