[package]
name = "storm"
version = "0.1.0"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
failure = "0.1.5"
heck = "0.3.1"
log = "0.4"
env_logger = "0.6.0"

[build-dependencies]
wayland_protocol_code_generator = {path = "../wayland_protocol_code_generator"}

[dev-dependencies]
tempfile = "3.0.7"
nix = "0.13.0"