[package]
name = "wayland_protocol_code_generator"
version = "0.1.0"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2018"
description = "Generate codes used by saiko"
license = "MIT"

[dependencies]
wayland_protocol_scanner = "0.1.0"
heck = "0.3.1"
quote = "0.6"
syn = "0.15"
proc-macro2 = "0.4"
lazy_static = "1.3.0"